Updated to PrimeFaces 10 Fixed alignment mismatch with scrollbar

--- a/src/main/webapp/WEB-INF/resources/css/styles.css
+++ b/src/main/webapp/WEB-INF/resources/css/styles.css
@@ -3,9 +3,25 @@
 }
 
 .sidebar {
-    width: 400px;
+    width: 300px;
 }
 
 .full-height {
     height: 100%;
+}
+
+.ui-datatable {
+    height: 100%;
+}
+
+.ui-datatable .ui-datatable-header {
+    display: none;
+}
+
+.ui-datatable-scrollable-header-box {
+    margin-right: 0 !important;
+}
+
+.ui-datatable .ui-datatable-scrollable-body {
+    overflow-y: scroll;
 }
